--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package name="be.bastelstu.wcf.2fa" xmlns="http://www.woltlab.com" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.woltlab.com http://www.woltlab.com/XSD/maelstrom/package.xsd">
+<package name="be.bastelstu.wcf.twofa" xmlns="http://www.woltlab.com" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.woltlab.com http://www.woltlab.com/XSD/maelstrom/package.xsd">
 	<packageinformation>
 		<packagename><![CDATA[Tims 2-Factor Authentication]]></packagename>
 		<packagename language="de"><![CDATA[Tims 2-Faktor Authentifizierung]]></packagename>
@@ -29,7 +29,7 @@
 		<!--instruction type="option">option.xml</instruction-->
 		<instruction type="templateListener">templateListener.xml</instruction>
 		<instruction type="eventListener">eventListener.xml</instruction>
-		<!--instruction type="script" run="standalone">acp/be.bastelstu.wcf.2fa.install.php</instruction-->
+		<!--instruction type="script" run="standalone">acp/be.bastelstu.wcf.twofa.install.php</instruction-->
 	</instructions>
 	
 	<instructions type="update" fromversion="1.0.0 Alpha *">
