--- a/package.xml
+++ b/package.xml
@@ -24,12 +24,11 @@
 		<instruction type="language">language/*.xml</instruction>
 		<instruction type="file">file.tar</instruction>
 		<instruction type="template">template.tar</instruction>
-		<!--instruction type="acpTemplate">acptemplate.tar</instruction-->
+		<instruction type="acpTemplate">acptemplate.tar</instruction>
 		<instruction type="sql">install.sql</instruction>
 		<!--instruction type="option">option.xml</instruction-->
 		<instruction type="templateListener">templateListener.xml</instruction>
 		<instruction type="eventListener">eventListener.xml</instruction>
-		<!--instruction type="script" run="standalone">acp/be.bastelstu.wcf.twofa.install.php</instruction-->
 	</instructions>
 	
 	<instructions type="update" fromversion="1.0.0 Alpha *">
