--- a/package.xml
+++ b/package.xml
@@ -8,7 +8,7 @@
 		<isapplication>0</isapplication>
 		<version>1.0.0 Alpha 1</version>
 		<date>2013-09-07</date>
-		<license><![CDATA[Creative Commons Attribution-NonCommercial-ShareAlike <http://creativecommons.org/licenses/by-nc-sa/3.0/legalcode>]]></license>
+		<license><![CDATA[BSD 3-Clause License <http://opensource.org/licenses/BSD-3-Clause>]]></license>
 	</packageinformation>
 	
 	<authorinformation>
