--- a/package.xml
+++ b/package.xml
@@ -6,7 +6,7 @@
 		<packagedescription><![CDATA[]]></packagedescription>
 		<packagedescription language="de"><![CDATA[]]></packagedescription>
 		<isapplication>0</isapplication>
-		<version>1.0.0 Alpha 1</version>
+		<version>1.0.0 Beta 1</version>
 		<date>2013-09-07</date>
 		<license><![CDATA[BSD 3-Clause License <http://opensource.org/licenses/BSD-3-Clause>]]></license>
 	</packageinformation>
