--- a/package.xml
+++ b/package.xml
@@ -20,6 +20,10 @@
 		<requiredpackage minversion="2.0.0 Beta 1">com.woltlab.wcf</requiredpackage>
 	</requiredpackages>
 	
+	<phprequirements>
+		<function><![CDATA[hash_hmac]]></function>
+	</phprequirements>
+	
 	<instructions type="install">
 		<instruction type="language">language/*.xml</instruction>
 		<instruction type="file">file.tar</instruction>
