--- a/package.xml
+++ b/package.xml
@@ -20,6 +20,10 @@
 		<requiredpackage minversion="2.0.0 Beta 1">com.woltlab.wcf</requiredpackage>
 	</requiredpackages>
 	
+	<excludepackages>
+		<excludedpackage>com.tapatalk.wbb4</excludedpackage>
+	</excludepackages>
+	
 	<phprequirements>
 		<function><![CDATA[hash_hmac]]></function>
 	</phprequirements>
