--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,7 @@
 	
 	<requiredpackages>
 		<requiredpackage minversion="2.0.0 Beta 1">com.woltlab.wcf</requiredpackage>
+		<requiredpackage minversion="1.0.0 Beta 1" file="requirements/be.bastelstu.wcf.qr.tar">be.bastelstu.wcf.qr</requiredpackage>
 	</requiredpackages>
 	
 	<excludepackages>
