--- a/package.xml
+++ b/package.xml
@@ -22,9 +22,9 @@
 		<requiredpackage minversion="1.0.0 Beta 1" file="requirements/be.bastelstu.wcf.signer.tar">be.bastelstu.wcf.signer</requiredpackage>
 	</requiredpackages>
 	
-	<excludepackages>
+	<excludedpackages>
 		<excludedpackage>com.tapatalk.wbb4</excludedpackage>
-	</excludepackages>
+	</excludedpackages>
 	
 	<instructions type="install">
 		<instruction type="language">language/*.xml</instruction>
