--- a/package.xml
+++ b/package.xml
@@ -6,8 +6,8 @@
 		<packagedescription><![CDATA[Allows users to protect their account by a requiring an unique code at login.]]></packagedescription>
 		<packagedescription language="de"><![CDATA[Erlaubt Benutzern ihren Account zu schützen, indem ein eindeutiger Code beim Einloggen erfragt wird.]]></packagedescription>
 		<isapplication>0</isapplication>
-		<version>1.0.0 Beta 4</version>
-		<date>2013-11-04</date>
+		<version>1.0.0 Beta 5</version>
+		<date>2013-11-25</date>
 		<license><![CDATA[BSD 3-Clause License <http://opensource.org/licenses/BSD-3-Clause>]]></license>
 	</packageinformation>
 	
@@ -37,12 +37,21 @@
 		<instruction type="eventListener">eventListener.xml</instruction>
 	</instructions>
 	
+	<instructions type="update" fromversion="1.0.0 Beta 4">
+		<instruction type="file">file.tar</instruction>
+		<instruction type="template">template.tar</instruction>
+		<instruction type="acpTemplate">acptemplate.tar</instruction>
+		<instruction type="eventListener">eventListener.xml</instruction>
+		<instruction type="templateListener">templateListener.xml</instruction>
+	</instructions>
+	
 	<instructions type="update" fromversion="1.0.0 Beta 3">
 		<instruction type="language">language/*.xml</instruction>
 		<instruction type="file">file.tar</instruction>
 		<instruction type="template">template.tar</instruction>
 		<instruction type="acpTemplate">acptemplate.tar</instruction>
 		<instruction type="eventListener">eventListener.xml</instruction>
+		<instruction type="templateListener">templateListener.xml</instruction>
 	</instructions>
 	
 	<instructions type="update" fromversion="1.0.0 Beta 2">
@@ -52,6 +61,7 @@
 		<instruction type="acpTemplate">acptemplate.tar</instruction>
 		<instruction type="option">option.xml</instruction>
 		<instruction type="eventListener">eventListener.xml</instruction>
+		<instruction type="templateListener">templateListener.xml</instruction>
 	</instructions>
 	
 	<instructions type="update" fromversion="1.0.0 Beta 1">
@@ -62,5 +72,6 @@
 		<instruction type="sql">update_1.0.0_beta_2.sql</instruction>
 		<instruction type="option">option.xml</instruction>
 		<instruction type="eventListener">eventListener.xml</instruction>
+		<instruction type="templateListener">templateListener.xml</instruction>
 	</instructions>
 </package>
