Update package descriptions

--- a/package.xml
+++ b/package.xml
@@ -3,8 +3,8 @@
 	<packageinformation>
 		<packagename><![CDATA[Tim’s 2-Factor Authentication]]></packagename>
 		<packagename language="de"><![CDATA[Tims 2-Wege-Authentifizierung]]></packagename>
-		<packagedescription><![CDATA[Allows users to protect their account by requiring an unique code at login.]]></packagedescription>
-		<packagedescription language="de"><![CDATA[Erlaubt Benutzern ihren Account zu schützen, indem ein eindeutiger Code beim Einloggen erfragt wird.]]></packagedescription>
+		<packagedescription><![CDATA[Tim’s 2-Factor Authentication provides additional proctection for your users’ accounts. After login it ensures that the user himself sits in front of the computer by asking for an ephemeral security code!]]></packagedescription>
+		<packagedescription language="de"><![CDATA[Tims 2-Wege-Authentifizierung bietet zusätzlichen Schutz für Ihre Nutzer. Nach dem Login stellt es sicher, dass die richtige Person vor dem Bildschirm sitzt, indem ein nur kurzzeitig gültiger Sicherheits-Code abgefragt wird.]]></packagedescription>
 		<isapplication>0</isapplication>
 		<version>1.0.0 Beta 5</version>
 		<date>2013-11-25</date>
