--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: php
 php:
-  - 5.5
-  - 5.4
+  - 5.6
   - 5.3
 before_install:
+  - pear config-set auto_discover 1
   - pear install pear/PHP_CodeSniffer
+  - pear install pear.phpunit.de/phpcpd
   - phpenv rehash
 before_script:
   - git clone --branch=master --depth=1 --quiet git://github.com/WoltLab/WCF.git WCF
@@ -15,4 +16,4 @@ before_script:
 script:
   - find file -type f -name '*.php' |xargs -I file php -l file
   - phpcs -p --extensions=php --standard="`pwd`/WCF/CodeSniff/WCF" --ignore=lib/system/api/twofa/* file
-  
+  - phpcpd --verbose --min-lines 10 file || true
